# PaperLens

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  compose.yml  main.py  pyproject.toml
airflow/: Dockerfile  README.md  entrypoint.sh
airflow/dags/: health_dag.py
data/fixtures/: sample_api_response.py  sample_db_schema.txt
src/: dependencies.py  exceptions.py  main.py  middlewares.py
src/db/: factory.py
src/db/interfaces/: base.py  postgresql.py
src/models/: paper.py
src/repositories/: paper.py
src/routers/: health.py
src/schemas/api/: health.py
src/schemas/pdf_parser/: models.py
src/schemas/semantic_scholar/: paper.py
src/services/: metadata_fetcher.py
src/services/pdf_parser/: docling.py  factory.py  parser.py
src/services/semantic_scholar/: client.py  factory.py
src/settings/: config.py  logging.py
static/: PAPERLENS_IMPLEMENTATION_PLAN.md  PAPERLENS_MASTER_PLAN.md  PAPERLENS_MASTER_STORYBOOK.html  PAPERLENS_PROGRESS_TRACKER.html  PAPERLENS_QUESTION_BANK.html  PaperLens-storybook.html
tests/: conftest.py
tests/api/routers/: test_health.py
tests/unit/: test_config.py
